--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <h2 class="mb-4 text-animate">Saya Seorang <span class="typing"></span></h2>
 
                                 <p class="mb-4">
-                                    <a class="custom-btn btn custom-link seeu" href="#section_2" style="visibility: hidden;">Lihat Selengkapnya..</a>
+                                    <a class="custom-btn btn custom-link seeu" href="#section_3" style="visibility: hidden;">Lihat Project Saya</a>
                                 </p>
                             </div>
                         </div>
@@ -517,6 +517,14 @@
                                 <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/visul-studio-code.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
                                     <h3 class="pe-5 text-white">Visual Studio Code</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/xampp.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Xampp</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/laragon.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Laragon</h3>
                                 </div>
                             </div>
                         </div>
