--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="500" />
         <meta property="og:image:type" content="image/jpeg" /> -->
-        
-        <meta name="google-site-verification" content="X-CcHFSDLlhnm_KEE_lpJMWjdlQb32FJMTzfxt8adb4" />
 
 
         <style>
@@ -230,6 +228,7 @@
                                 <div class="swiper-wrapper">
                                     <a data-fslightbox href="images-parklaring/parklaring-bankjatim.jpg" class="swiper-slide"><img src="image-workplace/logo-bank-jatim.jpg" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                     <a data-fslightbox href="images-parklaring/parklaring-fruitylogic.jpg" class="swiper-slide"><img src="image-workplace/fruitylogic.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
+                                    <a href="#" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                 </div>
                             </div>
                         </div>
