update informasi portofolio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Portofolio Isul Alifajri" />
-        <meta property="og:description" content="Ini Adalah Portofolio Isul Alifajri yang di buat untuk menampilkan sedikit keahlian saya dalam bahasa pemrograman" />
+        <meta property="og:description" content="Halo, Saya Isul Alifajri.. Berpengalaman 1+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap" />
         <meta property="og:url" content="https://isulalifajri.github.io/" />
         <meta property="og:site_name" content="Isul Alifajri Portofolio" />
         <!-- <meta property="og:image" content="img/foto.jpeg" />
@@ -79,7 +79,8 @@
 
         <link href="css/templatemo-first-portfolio-style.css" rel="stylesheet">
         <link href = "https://code.jquery.com/ui/1.13.1/themes/smoothness/jquery-ui.css" rel = "stylesheet">
-        <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+        <!-- <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" /> -->
+        <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         
     </head>
     
@@ -228,7 +229,7 @@
                                 <div class="swiper-wrapper">
                                     <a data-fslightbox href="images-parklaring/parklaring-bankjatim.jpg" class="swiper-slide"><img src="image-workplace/logo-bank-jatim.jpg" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                     <a data-fslightbox href="images-parklaring/parklaring-fruitylogic.jpg" class="swiper-slide"><img src="image-workplace/fruitylogic.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
-                                    <a href="#" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
+                                    <a data-fslightbox href="image-workplace/kamar-pelajar.png" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                 </div>
                             </div>
                         </div>
@@ -546,7 +547,7 @@
                                 <div class="projects-info">
                                     <small class="projects-tag">Website</small>
 
-                                    <p class="projects-title">Framework Used : Codeigniter v3 laravel v8 dan Bootstrap</p>
+                                    <p class="projects-title">Framework Used : Codeigniter v3 laravel v8/10 dan Bootstrap</p>
                                 </div>
 
                                 <a href="./img/develop-web.jpg" class="popup-image">
@@ -726,7 +727,7 @@
         <script>
             $(document).ready(function(){
              var typed = new Typed(".typing", {
-                    strings:["Web Developer"],
+                    strings:["Web Developer","Backend Developer","Freelancer"],
                     typeSpeed:100,
                     backSpeed:60,
                     loop:true
@@ -840,7 +841,8 @@
             handleScrollAnimation();
             });
           </script>     
-          <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>    
+          <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>     -->
+          <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
             <script>
                     swiper = new Swiper('.swiper-work', {
                         loop:true,
