--- a/project/project-2.html
+++ b/project/project-2.html
@@ -31,11 +31,10 @@
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Portofolio Isul Alifajri Izul Alifajri" />
-        <meta property="og:description" content="Ini Adalah Portofolio Isul Alifajri Izul Alifajri yang di buat untuk menampilkan sedikit keahlian saya dalam bahasa pemgrograman" />
+        <meta property="og:description" content="Halo, Saya Isul Alifajri.. Berpengalaman 1+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap" />
         <meta property="og:url" content="https://isulalifajri.github.io/project/project-2.html" />
         <meta property="og:site_name" content="Isul Alifajri Portofolio" />
         
-        <meta name="google-site-verification" content="X-CcHFSDLlhnm_KEE_lpJMWjdlQb32FJMTzfxt8adb4" />
 
         <!-- Icon Portofolio -->
         <link href="../img/heningsunyi.jpg" rel="icon">
