update informasi portofolio

--- a/project/project-2.html
+++ b/project/project-2.html
@@ -24,9 +24,9 @@
 
 
         <title>Project Second</title>
-        <meta name="description" content="Portofolio Isul Alifajri Izul Alifajri">
-        <meta name="keywords" content="Portofolio Isul Alifajri Izul Alifajri" />
-        <meta name="author" content="isulalifajri Isul Alifajri Izul Alifajri">
+        <meta name="description" content="Halo, Saya Isul Alifajri.. Berpengalaman 1+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap">
+        <meta name="keywords" content="Isul Alifajri Izul Alifajri Web Developer, Backend Developer, Frontend Developer, Software Developer" />
+        <meta name="author" content="isulalifajri">
         <link rel="canonical" href="https://isulalifajri.github.io/project/project-2.html" />
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
