update informasi portofolio

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <title>Selamat Datang di Portofolio Isul Alifajri</title>
 
         <meta name="description" content="Halo, Saya Isul Alifajri.. Berpengalaman 1+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap">
-        <meta name="keywords" content="Isul Alifajri Izul Alifajri Web Developer, Backend Developer, Frontend Developer, Software Developer" />
+        <meta name="keywords" content="Isul Alifajri, Izul Alifajri, Web Developer, Backend Developer, Frontend Developer, Software Developer" />
         <meta name="author" content="isulalifajri">
-        <link rel="canonical" href="https://isulalifajri.github.io/project/project-4.html" />
+        <link rel="canonical" href="https://isulalifajri.github.io/" />
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Portofolio Isul Alifajri Izul Alifajri" />
         <meta property="og:description" content="Halo, Saya Isul Alifajri.. Berpengalaman 1+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap" />
-        <meta property="og:url" content="https://isulalifajri.github.io" />
+        <meta property="og:url" content="https://isulalifajri.github.io/" />
         <meta property="og:site_name" content="Isul Alifajri Portofolio" />
         <!-- <meta property="og:image" content="img/foto.jpeg" />
         <meta property="og:image:width" content="400" />
