--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                 <div class="swiper-wrapper">
                                     <a data-fslightbox href="images-parklaring/parklaring-bankjatim.jpg" class="swiper-slide"><img src="image-workplace/logo-bank-jatim.jpg" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                     <a data-fslightbox href="images-parklaring/parklaring-fruitylogic.jpg" class="swiper-slide"><img src="image-workplace/fruitylogic.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
-                                    <a data-fslightbox href="image-workplace/kamar-pelajar.png" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
+                                    <a data-fslightbox href="images-parklaring/Sertifikat_Kamar-Pelajar .jpg" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                 </div>
                             </div>
                         </div>
