--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <title>Selamat Datang di Portofolio Isul Alifajri</title>
 
-        <meta name="description" content="Halo, Saya Isul Alifajri.. Berpengalaman 1+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap">
+        <meta name="description" content="Halo, Saya Isul Alifajri.. Berpengalaman 3+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap">
         <meta name="keywords" content="Isul Alifajri, Izul Alifajri, Web Developer, Backend Developer, Frontend Developer, Software Developer" />
         <meta name="author" content="isulalifajri">
         <link rel="canonical" href="https://isulalifajri.github.io/" />
@@ -249,6 +249,53 @@
                         </div>    
 
                             <div class="row pt-lg-5 js-scroll slide-right flex-wrap">
+                                <!-- project 5 -->
+                                <div class="col-md-4">
+                                    <div class="services-thumb-new">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Project 5</h3>
+
+                                            <div class="services-price-wrap ms-auto">
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/laravel.png" class="hover-code" alt="laravel"></p>
+                                                <div class="services-price-overlay"></div>
+                                            </div>
+                                        </div>
+
+                                        <div class="swiper swiper-new">
+                                            <div class="swiper-wrapper">
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-images5/Page-Home-PT-TechnoElectra.png">
+                                                        <img src="project-images5/Page-Home-PT-TechnoElectra.png" alt="img project 5">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-images5/Page-About-Us-PT-TechnoElectra.png">
+                                                        <img src="project-images5/Page-About-Us-PT-TechnoElectra.png" alt="img project 5">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-images5/Page-Pemesanan-PT-TechnoElectra.png">
+                                                        <img src="project-images5/Page-Pemesanan-PT-TechnoElectra.png" alt="img project 5">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-images5/Page-Cart-PT-TechnoElectra.png">
+                                                        <img src="project-images5/Page-Cart-PT-TechnoElectra.png" alt="img project 5">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="swiper-pagination swiper-pagination-new"></div>
+                                            <div class="swiper-button-prev swiper-button-prev-new"></div>
+                                            <div class="swiper-button-next swiper-button-next-new"></div>
+                                        </div>
+
+
+                                        <p class="descript-web">Membuat Website OmniCommerce(e-commerce, POS, dan inventory management) dengan laravel v10. Untuk informasi Lebih lanjut tentang website ini silahkan klik <b>lihat selengkapnya.</b>
+
+                                        <p><a href="project/project-5.html" target="_blank" class="custom-btn custom-border-btn btn mt-2">lihat selengkapnya</a></p>
+
+                                    </div>
+                                </div>
                                 <!-- project 4 -->
                                 <div class="col-md-4">
                                     <div class="services-thumb-new">
