--- a/project/project-5.html
+++ b/project/project-5.html
@@ -22,19 +22,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-        <title>Project Third</title>
+        <title>Project Fifth</title>
         <meta name="description" content="Halo, Saya Isul Alifajri.. Berpengalaman 3+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap">
         <meta name="keywords" content="Isul Alifajri, Izul Alifajri, Web Developer, Backend Developer, Frontend Developer, Software Developer" />
         <meta name="author" content="isulalifajri">
-        <link rel="canonical" href="https://isulalifajri.github.io/project/project-3.html" />
+        <link rel="canonical" href="https://isulalifajri.github.io/project/project-5.html" />
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Portofolio Isul Alifajri Izul Alifajri" />
         <meta property="og:description" content="Halo, Saya Isul Alifajri.. Berpengalaman 1+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap" />
-        <meta property="og:url" content="https://isulalifajri.github.io/project/project-3.html" />
+        <meta property="og:url" content="https://isulalifajri.github.io/project/project-4.html" />
         <meta property="og:site_name" content="Isul Alifajri Portofolio" />
-
-
 
         <!-- Icon Portofolio -->
         <link href="../img/heningsunyi.jpg" rel="icon">
@@ -127,34 +125,47 @@
                             <div class="about-thumb">
 
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top">
-                                    <h2 class="text-white me-4 mb-0">Dekorasi</h2>
+                                    <h4 class="text-white me-4 mb-0">OmniCommerce</h4>
 
-                                    <img src="../project-images3/project-3-img1.png" class="avatar-image img-fluid" alt="">
+                                    <img src="../project-images4/storenits/frontend/frontend-storenits-1.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
                                 <h3 class="card-1 pt-2 mb-3 scrolled slide-right">About Web</h3>
 
                                 <div class="card-2 scrolled fade-in-bottom font">
-                                    <label class="mt-3"><strong>Markup dan Bahasa Pemrograman</strong></label>
+                                    <label class="mt-3"><strong>Bahasa Pemrograman dan Database</strong></label>
                                      <ul>
-                                        <li>HTML</li>
+                                        <li>PHP v8.2.4</li>
                                         <li>Javascript</li>
                                         <li>JQuery</li>
                                         <li>Css</li>
+                                        <li>MySQL</li>
+                                     </ul>
+                                     <label><strong>Framework :</strong></label>
+                                     <ul>
+                                        <li>Laravel v10.33.0</li>
+                                        <li>Bootstrap v5 (Sneat Dashboard)</li>
                                      </ul>
                                     <label><strong>Fitur-Fitur :</strong></label>
                                      <ul>
                                         <li>Responsive Page</li>
-                                        <li>Slider Image by Swiper js</li>
-                                        <li>Add To Favorite</li>
-                                        <li>Share Data</li>
-                                        <li>CRUD Favorite To Local Storage</li>
+                                        <li>Autentikasi (Login, Register, Forgot Password + reCAPTCHA)</li>
+                                        <li>Midtrans Payment Integration</li>
+                                        <li>Manajemen Produk (multiple image), Warna, Kategori, Supplier</li>
+                                        <li>Sistem Cart dan Checkout</li>
+                                        <li>Admin Dashboard dengan Statistik & Grafik (Highcharts)</li>
+                                        <li>Notifikasi Email & Database (Queued)</li>
+                                        <li>CRUD Barang Masuk / Barang Keluar → Support multiple item saat input → Cetak ke PDF (Barryvdh DomPDF)</li>
+                                        <li>DataTables server-side (khusus tabel user di admin)</li>
+                                        <li>Manajemen User, Role & Permission (dengan Select2)</li>
+                                        <li>Responsive Frontend → Swiper.js slider → Load More Produk → Real-time Search (AJAX)</li>
+                                        <li>Type Data in Database : uuid(primary key), string, json(crud sosmed), int, boolean, datetime(timestamp)</li>
                                      </ul>
                                     <p><strong>Dokumentasi :</strong>
-                                        <a class="code"  href="https://youtu.be/1bb9KVwRf5o" target="_blank">
+                                        <!-- <a class="code"  href="https://youtu.be/1bb9KVwRf5o" target="_blank">
                                             <img src="../icons-programs/youtube.png" class="hover-code" alt="">
-                                        </a>
-                                        <a class="code"  href="https://github.com/isulalifajri/website-dekorasi-pernikahan" target="_blank" id="tooltip1" title="private">
+                                        </a> -->
+                                        <a class="code"  href="https://github.com/isulalifajri/storenits-laravel-10" target="_blank" id="tooltip1" title="private">
                                             <img src="../icons-programs/github.png" class="hover-code" alt="" style="transform: scale(1.4);">
                                         </a>
                                     </p>
@@ -164,19 +175,51 @@
 
                         <div class="col-lg-6 col-12 scrolled slide-left" style="cursor:pointer;">
                             <h3 class="card-1 pt-2 mb-3 scrolled slide-left">User Interface</h3>
-                            <label class="card-1" style="font-size: 12px;font-family: 'Poppins';"><b>Noted: </b>Tampilan Image Slider ini juga menggunakan <em>fslightbox cdn</em>. jadi, jika ingin melihat detail image, silahkan klik image tersebut. </label>
+                            <label class="card-1" style="font-size: 12px;font-family: 'Poppins';text-align: left; margin-bottom: 3px;">
+                                <b>Noted: </b>Tampilan Image Slider ini juga menggunakan <em>fslightbox cdn</em>. 
+                                jadi, jika ingin melihat detail image, silahkan klik image tersebut. </label>
                             <div class="swiper swiper1" style="margin-bottom:20px;">
                                 <div class="swiper-wrapper">
-                                    <a data-fslightbox href="../project-images3/project-3-img1.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img1.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img2.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img2.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img3.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img3.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img4.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img4.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img5.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img5.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img6.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img6.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img7.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img7.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img8.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img8.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img9.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img9.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img10.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img10.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Home-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Home-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Bayar-Sekarang-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Bayar-Sekarang-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Cetak-Barang-Masuk-PDF.png" class="swiper-slide text-center"><img src="../project-images5/Cetak-Barang-Masuk-PDF.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Cetak-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Cetak-Barang-Masuk.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Cetak-PDF.PNG" class="swiper-slide text-center"><img src="../project-images5/Cetak-PDF.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Data-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Data-Barang-Masuk.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Data-Barang.png" class="swiper-slide text-center"><img src="../project-images5/Data-Barang.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Data-Manajamen-Akun.png" class="swiper-slide text-center"><img src="../project-images5/Data-Manajamen-Akun.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/email-notification.PNG" class="swiper-slide text-center"><img src="../project-images5/email-notification.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Master-Barang.png" class="swiper-slide text-center"><img src="../project-images5/Master-Barang.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/notifikasi-superadmin.PNG" class="swiper-slide text-center"><img src="../project-images5/notifikasi-superadmin.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-About-Us-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-About-Us-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Cart-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Cart-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Change-Password-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Change-Password-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Company-Profile.png" class="swiper-slide text-center"><img src="../project-images5/Page-Company-Profile.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Create-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Page-Create-Barang-Masuk.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Create-Barang-Terjual.png" class="swiper-slide text-center"><img src="../project-images5/Page-Create-Barang-Terjual.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Dashboard.png" class="swiper-slide text-center"><img src="../project-images5/Page-Dashboard.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Detail-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Barang-Masuk.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Detail-Order-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Order-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Detail-Status-Order-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Status-Order-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Detail-Status-Order.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Status-Order.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Forgot-Password.PNG" class="swiper-slide text-center"><img src="../project-images5/Page-Forgot-Password.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Home-PT-TechnoElectraad.png" class="swiper-slide text-center"><img src="../project-images5/Page-Home-PT-TechnoElectraad.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-HomeVMobile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-HomeVMobile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/page-login.PNG" class="swiper-slide text-center"><img src="../project-images5/page-login.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Notification-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Notification-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Pemesanan-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Pemesanan-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Pemesanan.png" class="swiper-slide text-center"><img src="../project-images5/Page-Pemesanan.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-PemesananVMobile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-PemesananVMobile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Profile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Register.png/Page-Profile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Register.png" class="swiper-slide text-center"><img src="../project-images5/Page-Register.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-User.png" class="swiper-slide text-center"><img src="../project-images5/Page-User.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Pemesanan.PNG" class="swiper-slide text-center"><img src="../project-images5/Pemesanan.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Reset-Password.PNG" class="swiper-slide text-center"><img src="../project-images5/Reset-Password.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Reset-Password2.PNG" class="swiper-slide text-center"><img src="../project-images5/Reset-Password2.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/search-result.PNG" class="swiper-slide text-center"><img src="../project-images5/search-result.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/update-profile-image.PNG" class="swiper-slide text-center"><img src="../project-images5/update-profile-image.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Update-profile.PNG" class="swiper-slide text-center"><img src="../project-images5/Update-profile.PNG" class="img-fluid" alt=""></a>
                                 </div>
                                 <div class="swiper-pagination swiper-pagination1"></div>
                                 <div class="swiper-button-prev swiper-button-prev1"></div>
